Payment Service/k8s/paiement-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paiement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: paiement
  template:
    metadata:
      labels:
        app: paiement
    spec:
      containers:
        - name: paiement
          image: paiement-image:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paiement-service
spec:
  selector:
    app: paiement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30732
  type: NodePort
